# amdmonitor

./: CMakeLists.txt  README.md  install-deps.sh  main.cpp  pwr_counters.cpp  pwr_counters.hpp  sql.cpp  sql.hpp
